# MixLab

./: .gitignore  CMakeLists.txt  LICENSE  README.md  atom_app.cpp  atom_app.hpp  atom_canvas.cpp  atom_canvas.hpp  atom_frame.cpp  atom_frame.hpp  atom_mixer.cpp  atom_mixer.hpp  gui_dialogs.cpp  gui_dialogs.hpp  gui_menu.cpp  gui_menu.hpp  gui_sidebar.cpp  gui_sidebar.hpp  language.cpp  language.hpp  molecule_data.cpp  molecule_data.hpp  projektaufteilung_deutsch.html  reaction.cpp  reaction.hpp  reaction_adapter.cpp  reaction_adapter.hpp  reaction_api.hpp  reaction_controller.cpp  reaction_controller.hpp  reaction_history.cpp  reaction_history.hpp  test_logic.cpp  ui_state.hpp
tests/: test_atom_mixer.cpp  test_logic.cpp
